<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/tv_title_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="45dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tv_signup_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tv_context_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_two"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/full_name"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:inputType="text"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/email_id"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/phone_number"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:inputType="number"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/et_set_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/password"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:maxLength="8"
            />

        <EditText
            android:id="@+id/et_reset_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/re_write_pass"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:maxLength="8"
            />

        <TextView
            android:id="@+id/tv_password_match_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_not_matched"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:background="@drawable/custom_ripple_effect"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp"
            />

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existing_acc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
