<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">

        <TextView
            android:id="@+id/tv_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boarding_1"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/tv_context_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_one"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_title_two"
            android:textAlignment="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/tv_context_one"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/email_id"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:layout_marginTop="25dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/et_email"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/phone_number"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:layout_marginTop="15dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:maxLength="11"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/et_number"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/password"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:layout_marginTop="15dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:maxLength="8"
            />
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:text="@string/change_pass"
            android:textColor="@color/blue"
            android:layout_alignParentRight="true"
            android:layout_marginTop="13dp"
            android:layout_marginRight="40dp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/tv_forgot_password"
            android:text="@string/login"
            android:background="@drawable/custom_ripple_effect"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textSize="18dp"/>
        <LinearLayout
            android:id="@+id/layout_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_centerHorizontal="true">

            <View
                android:id="@+id/view_one"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with"
                android:textColor="@color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <View
                android:id="@+id/view_two"
                android:layout_width="90dp"
                android:layout_height="1dp"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                />
        </LinearLayout>




        <LinearLayout
            android:id="@+id/layout_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_one"
            android:orientation="horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>



    </RelativeLayout>
</ScrollView>