<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="45dp"
            android:layout_centerHorizontal="true"

            />
        <TextView
            android:id="@+id/tv_signup_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_pass"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:layout_below="@id/tv_title_one"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/tv_context_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_detail"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_signup_title_two"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:lineHeight="20sp"
            android:layout_centerHorizontal="true"
            />
        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/tv_context_three"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/custom_light_edit_text"
            android:hint="@string/phone_number"
            android:textColorHint="@color/light_gray"
            android:paddingStart="30dp"
            android:layout_marginTop="40dp"
            android:inputType="number"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/btn_send_otp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/et_number"
            android:text="@string/send"
            android:background="@drawable/custom_ripple_effect"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:layout_marginBottom="30dp"/>

    </RelativeLayout>

</RelativeLayout>