<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_left_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/left_arrow"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/write_profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="2dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textAlignment="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile_image"
        android:layout_below="@id/layout_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:scaleType="centerCrop"
        android:background="@drawable/custom_capture_image"/>



    <ImageView
        android:id="@+id/image_camera"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/photo_camera"
        android:background="@drawable/camera_background"
        android:padding="10dp"
        android:layout_alignEnd="@id/img_profile_image"
        android:layout_alignBottom="@id/img_profile_image"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/image_camera"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_light_edit_text"
        android:hint="@string/full_name"
        android:textColorHint="@color/light_gray"
        android:paddingStart="30dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/et_name"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_light_edit_text"
        android:hint="@string/email_id"
        android:textColorHint="@color/light_gray"
        android:paddingStart="30dp"
        android:layout_marginTop="15dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/et_email"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_light_edit_text"
        android:hint="@string/phone_number"
        android:textColorHint="@color/light_gray"
        android:paddingStart="30dp"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/tv_update"
        android:background="@drawable/custom_ripple_effect"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAllCaps="false"
        android:textSize="18dp"/>

</RelativeLayout>