<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectToGo">

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_logo_background"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/splash_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:textColor="@color/secondary"
            android:text="@string/title"
            android:layout_centerHorizontal="true"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_go_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/custom_ripple_effect"
        android:textColor="@color/white"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="230dp"
        android:textAllCaps="false"
        android:layout_below="@id/logo_layout"
        android:textSize="18dp"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:background="@drawable/custom_ripple_effect"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:layout_below="@id/btn_go_login"
        android:textSize="18dp"/>

</RelativeLayout>