<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/blue"
            android:gravity="center">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="16dp"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewpager2_one"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"/>

                <LinearLayout
                    android:id="@+id/slideDotAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"/>

                <TextView
                    android:id="@+id/tv_top_services"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_all"
                    android:textSize="18sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/select_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bst_service"
                    android:textSize="18sp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:layout_marginBottom="120dp"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>
